refactor: 웹요청 오류로인한  날씨 구현 수정

--- a/personalPage.html
+++ b/personalPage.html
@@ -188,11 +188,10 @@
   <body>
     <div class="navbar">
       <div class="left-container">
-        <div class="weather">
-          <span>오늘의 날씨 :</span> <span id="temp"></span>
-        </div>
+        <div id="weather"><span></span><span></span></div>
         <div class="countdown">
-          <span>부트캠프 종료 :</span> <span id="countdown"></span>
+          <span>부트캠프 종료 :</span>
+          <span id="countdown"></span>
         </div>
       </div>
       <div class="title-container">
