--- a/index.html
+++ b/index.html
@@ -14,23 +14,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script type="module">
-      let url = "http://spartacodingclub.shop/sparta_api/weather/seoul";
-      fetch(url)
-        .then((res) => res.json())
-        .then((data) => {
-          let temp = data["temp"];
-          $("#temp").text(temp + "도");
-
-          // 온도에 따른 색상 변경
-          if (temp > 10) {
-            $("#temp").css("color", "#fbc4ab "); // 따뜻할 때 색상
-          } else {
-            $("#temp").css("color", "blue"); // 추울 때 색상
-          }
-        })
-
-        .catch((error) => console.log("Error:", error));
-
       // Firebase SDK 라이브러리 가져오기
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
       import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
@@ -114,12 +97,9 @@
   <body>
     <div class="navbar">
       <div class="left-container">
-        <div class="weather">
-          <span class="static-color">오늘의 날씨 :</span>
-          <span id="temp"></span>
-        </div>
+        <div id="weather"><span></span><span></span></div>
         <div class="countdown">
-          <span class="static-color">부트캠프 종료 :</span>
+          <span>부트캠프 종료 :</span>
           <span id="countdown"></span>
         </div>
       </div>
@@ -248,6 +228,7 @@
       </section>
     </div>
     <script src="js/theme.js"></script>
+    <script src="js/weather.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/posting.js"></script>
     <script src="js/dday.js"></script>
