--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
       crossorigin="anonymous"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js"></script>
 
     <script type="module">
       // Firebase SDK 라이브러리 가져오기
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
       import {
+        getFirestore,
         collection,
         addDoc,
+        getDocs,
       } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-      import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+      import {
+        getStorage,
+        ref as sRef,
+        uploadBytes,
+        getDownloadURL,
+      } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js";
 
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
@@ -37,45 +44,52 @@
       // Firebase 인스턴스 초기화
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
+      async function uploadFile(file) {
+        const storage = getStorage(app);
+        const storageRef = sRef(storage, `images/${file.name}`);
+        const snapshot = await uploadBytes(storageRef, file);
+        const downloadURL = await getDownloadURL(snapshot.ref);
+        return downloadURL;
+      }
 
-      $("#addbtn").click(async function () {
-        let image = $("#image").val();
-        let name = $("#name").val();
+      $(document).ready(function () {
+        // 멤버 추가 버튼 이벤트 리스너
+        $("#addbtn").click(async function () {
+          const fileInput = document.getElementById("imageUpload");
+          if (fileInput.files.length > 0) {
+            const file = fileInput.files[0];
+            const imageUrl = await uploadFile(file);
+            const name = $("#name").val();
 
-        let doc = {
-          image: image,
-          name: name,
-        };
-        await addDoc(collection(db, "members"), doc);
-        alert("추가 완료.");
-        window.location.reload();
-      });
-      let docs = await getDocs(collection(db, "members"));
-      docs.forEach((doc) => {
-        let row = doc.data();
-        let image = row["image"];
-        let name = row["name"];
-        let docId = doc.id; // Firestore 문서 ID
+            await addDoc(collection(db, "members"), {
+              name: name,
+              image: imageUrl,
+            });
+            alert("멤버가 추가되었습니다.");
+            // 페이지를 새로고침하는 대신 멤버 목록을 업데이트하는 함수를 호출할 수 있습니다.
+          } else {
+            alert("이미지 파일을 선택해주세요.");
+          }
+        });
 
-        let temp_html = `
-          <div class="member">
-            <a href="personalPage.html?memberId=${docId}">
-              <img
-                src="${image}"
-                class="bd-placeholder-img rounded-circle"
-                width="140"
-                height="140"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              />
-              <span class="name">${name}</span>
-            </a>
-          </div>`;
+        // 멤버 목록 업데이트 함수
+        async function updateMemberList() {
+          $(".teamMembers").empty();
+          const docs = await getDocs(collection(db, "members"));
+          docs.forEach((doc) => {
+            let data = doc.data();
+            let temp_html = `<div class="member">
+        <a href="personalPage.html?memberId=${doc.id}">
+          <img src="${data.image}" class="bd-placeholder-img rounded-circle" width="140" height="140" />
+          <span class="name">${data.name}</span>
+        </a>
+      </div>`;
+            $(".teamMembers").append(temp_html);
+          });
+        }
 
-        $(".teamMembers").append(temp_html);
+        // 페이지 로드 시 멤버 목록을 불러옵니다.
+        updateMemberList();
       });
       function getLocation() {
         if (navigator.geolocation) {
@@ -227,19 +241,20 @@
           />
         </svg>
       </section>
-      <!-- 기존 hr에 class왜 지정하는건지 모르겠어서 그냥 임의로 바꿔봤습니다.. -->
+
       <hr />
-      <!-- <hr class="featurette-divider" /> -->
       <section class="mypostingbox">
         <div class="form-floating mb-3">
           <input
-            type="email"
+            type="file"
             class="form-control"
-            id="image"
-            placeholder="이미지 주소"
+            id="imageUpload"
+            placeholder="이미지 업로드"
+            accept="image/*"
           />
-          <label for="image">이미지 주소</label>
+          <label for="imageUpload">사진</label>
         </div>
+
         <div class="form-floating mb-3">
           <input
             type="email"
@@ -253,10 +268,10 @@
           추가하기
         </button>
       </section>
+      <button type="button" id="addMemberbtn" class="btn btn-outline-info">
+        멤버 추가
+      </button>
       <section class="teamMembers">
-        <button type="button" id="addMemberbtn" class="btn btn-outline-info">
-          멤버 추가
-        </button>
         <div class="member"></div>
       </section>
     </div>
