--- a/personalPage.html
+++ b/personalPage.html
@@ -19,6 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
+    User
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
       import {
@@ -33,8 +34,8 @@
         orderBy,
         getDocs,
         serverTimestamp,
-        increment,
       } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+      import { increment } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
       const firebaseConfig = {
         apiKey: "AIzaSyAfN5PZcj9NbBj2vdB8JMFQp_zTAm-xHuk",
@@ -45,15 +46,52 @@
         appId: "1:682214502456:web:686883842015c32e59f6cd",
         measurementId: "G-G9NFH0GQ2E",
       };
-
+      // Firebase 인스턴스 초기화
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
-
       document.addEventListener("DOMContentLoaded", async function () {
         const urlParams = new URLSearchParams(window.location.search);
         const memberId = urlParams.get("memberId");
         const dbRef = doc(db, "members", memberId);
-        fetchAndRenderMemberData();
+
+        async function fetchAndRenderMemberData() {
+          const docSnap = await getDoc(dbRef);
+          if (docSnap.exists()) {
+            const memberData = docSnap.data();
+
+            // 기본 정보 및 이미지 렌더링
+            document.title = `${memberData.name} 페이지`;
+            document.getElementById("name").textContent = memberData.name;
+            document.getElementById("profilePic").src =
+              memberData.image || "path/to/default/image.png";
+
+            // 추가 정보 렌더링
+            document.getElementById("displayAge").textContent =
+              memberData.age || "";
+            document.getElementById("displayLocation").textContent =
+              memberData.location || "";
+            document.getElementById("displayMbti").textContent =
+              memberData.mbti || "";
+            document.getElementById("displaySpecialty").textContent =
+              memberData.specialty || "";
+            document.getElementById("displayFavoriteFood").textContent =
+              memberData.favoriteFood || "";
+
+            // Edit form에도 데이터 세팅
+            document.getElementById("imageUploadUrl").value =
+              memberData.image || "";
+            document.getElementById("ageInput").value = memberData.age || "";
+            document.getElementById("locationInput").value =
+              memberData.location || "";
+            document.getElementById("mbtiInput").value = memberData.mbti || "";
+            document.getElementById("specialtyInput").value =
+              memberData.specialty || "";
+            document.getElementById("favoriteFoodInput").value =
+              memberData.favoriteFood || "";
+          } else {
+            console.log("No such document!");
+          }
+        }
 
         document
           .getElementById("editProfileBtn")
@@ -82,11 +120,12 @@
               favoriteFood,
             };
             await updateDoc(dbRef, updatedData);
+
+            // 업데이트 후 정보 다시 불러와서 화면에 표시 (새로고침 없이)
             fetchAndRenderMemberData();
             document.getElementById("editForm").style.display = "none";
             document.getElementById("profile-info").style.display = "block";
           });
-
         document
           .getElementById("deleteProfileBtn")
           .addEventListener("click", async function () {
@@ -122,19 +161,19 @@
           querySnapshot.forEach((doc) => {
             const entry = doc.data();
             const entryElement = `
-    <div class="guestbook-entry">
-      <span class="guestbook-name">${entry.name}:</span>
-      <p class="guestbook-message">${entry.message} </p>
-      
-      <button class="btn btn-primary like-button" data-id="${
-        doc.id
-      }">👍</button>
-      <span class="likes-count"> ${entry.likes || 0}</span>
-      <button class="btn btn-danger delete-guestbook-entry" data-id="${
-        doc.id
-      }">❌</button>
-    </div>
-    `;
+                  <div class="guestbook-entry">
+                    <span class="guestbook-name">${entry.name}:</span>
+                    <p class="guestbook-message">${entry.message}</p>
+
+                    <button class="btn btn-primary like-button" data-id="${
+                      doc.id
+                    }">👍</button>
+                    <span class="likes-count"> ${entry.likes || 0}</span>
+                    <button class="btn btn-danger delete-guestbook-entry" data-id="${
+                      doc.id
+                    }">❌</button>
+                  </div>
+                  `;
             $("#guestbookEntries").append(entryElement);
           });
 
@@ -160,17 +199,12 @@
           });
         }
 
-        async function fetchAndRenderMemberData() {
-          const docSnap = await getDoc(dbRef);
-          if (docSnap.exists()) {
-            const memberData = docSnap.data();
-            // 멤버 데이터 렌더링 로직...
-          } else {
-            console.log("No such document!");
-          }
-        }
+        // 페이지 로드 시 방명록 렌더링
+        $(document).ready(function () {
+          renderGuestbookEntries();
+        });
 
-        renderGuestbookEntries(); // 초기 페이지 로드 시 방명록 렌더링
+        fetchAndRenderMemberData();
       });
     </script>
   </head>
